--- a/src/app/index.html
+++ b/src/app/index.html
@@ -437,7 +437,7 @@
 									(This can't be undone)
 								</div>
 								<div class="text-center mb-3">
-									<button type="button" class="btn btn-danger btn-sm" data-bs-dismiss="modal" onclick="manageKeys2_Delete()">
+									<button type="button" class="btn btn-danger btn-sm" onclick="manageKeys2_Delete()">
 										<svg class="bi" width="18" height="18">
 											<use xlink:href="vendor/bootstrap-icons.svg#trash" />
 										</svg> Delete
