--- a/src/app/index.html
+++ b/src/app/index.html
@@ -113,7 +113,7 @@
 					<div class="col-4">
 						<svg class="bi" width="18" height="18">
 							<use xlink:href="vendor/bootstrap-icons.svg#check-circle" />
-						</svg> Integrity
+						</svg> Security
 					</div>
 				</div>
 				<div class="window p-3" id="plWallets">
