--- a/src/app/index.html
+++ b/src/app/index.html
@@ -18,11 +18,11 @@
 				<img src="img/logo.png" class="img-fluid">
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start" onclick="frmWallets_Load()">
+				<button class="btn btn-dgb btn-lg text-start" onclick="frmKeys_Load()">
 					<svg class="bi bi-btn" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#key" />
 					</svg>
-					Wallet
+					Keys
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
@@ -95,7 +95,7 @@
 			</div>
 
 			<!-- Forms -->
-			<div class="m-3" id="frmWallets" hidden>
+			<div class="m-3" id="frmKeys" hidden>
 				<h1 class="p-4 text-center">
 					DigiByte Key Files
 				</h1>
@@ -116,20 +116,20 @@
 						</svg> Security
 					</div>
 				</div>
-				<div class="window p-3" id="plWallets">
-
+				<div class="window p-3" id="keysList">
+s
 				</div>
 				<hr>
 				<div class="row">
 					<div class="col-6">
-						<div class="option text-center p-4 me-1" data-bs-toggle="modal" data-bs-target="#generateKeys" onclick="frmWallets_Generate()">
+						<div class="option text-center p-4 me-1" data-bs-toggle="modal" data-bs-target="#generateKeys" onclick="frmKeys_Generate()">
 							<svg class="bi" width="18" height="18">
 								<use xlink:href="vendor/bootstrap-icons.svg#arrow-repeat" />
 							</svg> Generate
 						</div>
 					</div>
 					<div class="col-6">
-						<div class="option text-center p-4 ms-1" data-bs-toggle="modal" data-bs-target="#importKeys" onclick="frmWallets_Import()">
+						<div class="option text-center p-4 ms-1" data-bs-toggle="modal" data-bs-target="#importKeys" onclick="frmKeys_Import()">
 							<svg class="bi" width="18" height="18">
 								<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-in-down-right" />
 							</svg> Import
@@ -409,8 +409,8 @@
 							<div class="m-4" id="manageKeys1">
 								<div class="mb-3">
 									<div class="input-group mb-3">
-										<span class="input-group-text">Wallet File:</span>
-										<input type="text" class="form-control" id="manageKeys1Wallet" readonly>
+										<span class="input-group-text">Key File:</span>
+										<input type="text" class="form-control" id="manageKeys1File" readonly>
 									</div>
 								</div>
 								<div class="text-center mb-3">
@@ -463,13 +463,19 @@
 					</div>
 				</div>
 			</div>
+			<div class="m-3" id="frmAccounts" hidden>
+				<h1 class="p-4 text-center">
+					DigiByte Accounts
+				</h1>
+			</div>
 		</div>
 	</div>
 
 	<script src="vendor/bootstrap.js"></script>
 	<script src="js/bridge.js"></script>
 	<script src="js/forms.js"></script>
-	<script src="js/frmWallets.js"></script>
+	<script src="js/frmKeys.js"></script>
+	<script src="js/frmAccounts.js"></script>
 </body>
 
 </html>
