--- a/src/app/index.html
+++ b/src/app/index.html
@@ -97,13 +97,13 @@
 			<!-- Forms -->
 			<div class="m-3" id="frmKeys" hidden>
 				<h1 class="p-4 text-center">
-					DigiByte Key Files
+					DigiByte Keys
 				</h1>
 				<div class="row p-5">
 					<div class="col-4">
 						<svg class="bi" width="18" height="18">
-							<use xlink:href="vendor/bootstrap-icons.svg#file-earmark-binary" />
-						</svg> File
+							<use xlink:href="vendor/bootstrap-icons.svg#wallet" />
+						</svg> Name
 					</div>
 					<div class="col-4">
 						<svg class="bi" width="18" height="18">
@@ -112,12 +112,12 @@
 					</div>
 					<div class="col-4">
 						<svg class="bi" width="18" height="18">
-							<use xlink:href="vendor/bootstrap-icons.svg#check-circle" />
-						</svg> Security
+							<use xlink:href="vendor/bootstrap-icons.svg#info-circle" />
+						</svg> Information
 					</div>
 				</div>
 				<div class="window p-3" id="keysList">
-s
+
 				</div>
 				<hr>
 				<div class="row">
@@ -155,7 +155,7 @@ s
 								</div>
 								<div class="mb-3">
 									<label>Name:</label>
-									<input type="text" class="form-control" id="generateKeys1Name">
+									<input type="text" class="form-control" id="generateKeys1Name" placeholder="Key's name">
 								</div>
 								<div class="mb-3 text-center">
 									<span id="generateKeys1Error"></span>
@@ -176,13 +176,12 @@ s
 							<div class="m-4" id="generateKeys2">
 								<div class="mb-3">
 									<label>Password:</label>
-									<input type="password" class="form-control" id="generateKeys2Password1">
+									<input type="password" class="form-control" id="generateKeys2Password1" placeholder="Enter the password">
 								</div>
 								<div class="mb-3">
 									<label>Confirm password:</label>
-									<input type="password" class="form-control" id="generateKeys2Password2">
+									<input type="password" class="form-control" id="generateKeys2Password2" placeholder="Repeat the password">
 								</div>
-
 								<div class="mb-3 text-center">
 									<span id="generateKeys2Error"></span>
 								</div>
@@ -232,7 +231,7 @@ s
 								</div>
 								<div class="mb-3" id="importName">
 									<label>Name:</label>
-									<input type="text" class="form-control" id="importKeys1Name">
+									<input type="text" class="form-control" id="importKeys1Name" placeholder="Key's name">
 								</div>
 								<div class="mb-3 text-center">
 									<span id="importKeys1Error"></span>
@@ -333,7 +332,7 @@ s
 								<div class="mb-3">
 									<label>Private Key (WIF):</label>
 									<div class="input-group">
-										<input type="text" class="form-control" id="importKeys2KeysKey">
+										<input type="text" class="form-control" id="importKeys2KeysKey" placeholder="Wallet Import Format">
 										<button class="btn btn-success" type="button" onclick="importKeys2Keys_AddPrivateKey()">
 											<svg class="bi" width="18" height="18">
 												<use xlink:href="vendor/bootstrap-icons.svg#plus-circle" />
@@ -362,11 +361,11 @@ s
 							<div class="m-4" id="importKeys3">
 								<div class="mb-3">
 									<label>Password:</label>
-									<input type="password" class="form-control" id="importKeys3Password1">
+									<input type="password" class="form-control" id="importKeys3Password1" placeholder="Enter the password">
 								</div>
 								<div class="mb-3">
 									<label>Confirm password:</label>
-									<input type="password" class="form-control" id="importKeys3Password2">
+									<input type="password" class="form-control" id="importKeys3Password2" placeholder="Repeat the password">
 								</div>
 
 								<div class="mb-3 text-center">
@@ -410,7 +409,7 @@ s
 								<div class="mb-3">
 									<div class="input-group mb-3">
 										<span class="input-group-text">Key File:</span>
-										<input type="text" class="form-control" id="manageKeys1File" readonly>
+										<input type="text" class="form-control" id="manageKeys1Name" readonly>
 									</div>
 								</div>
 								<div class="text-center mb-3">
@@ -467,6 +466,36 @@ s
 				<h1 class="p-4 text-center">
 					DigiByte Accounts
 				</h1>
+				<div class="row p-5">
+					<div class="col-4">
+						<svg class="bi" width="18" height="18">
+							<use xlink:href="vendor/bootstrap-icons.svg#wallet" />
+						</svg> Name
+					</div>
+					<div class="col-3">
+						<svg class="bi" width="18" height="18">
+							<use xlink:href="vendor/bootstrap-icons.svg#piggy-bank" />
+						</svg> Balance
+					</div>
+					<div class="col-3">
+						<svg class="bi" width="18" height="18">
+							<use xlink:href="vendor/bootstrap-icons.svg#cash-coin" />
+						</svg> Value
+					</div>
+				</div>
+				<div class="window p-3" id="accountsList">
+
+				</div>
+				<hr>
+				<div class="row">
+					<div class="col-12">
+						<div class="option text-center p-4 me-1" data-bs-toggle="modal" data-bs-target="#generateKeys" onclick="frmKeys_Generate()">
+							<svg class="bi" width="18" height="18">
+								<use xlink:href="vendor/bootstrap-icons.svg#plus-circle" />
+							</svg> Add Account
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
