--- a/src/app/index.html
+++ b/src/app/index.html
@@ -99,7 +99,7 @@
 				<h1 class="p-4 text-center">
 					DigiByte Keys
 				</h1>
-				<div class="row p-5">
+				<div class="row px-5 py-4">
 					<div class="col-4">
 						<svg class="bi" width="18" height="18">
 							<use xlink:href="vendor/bootstrap-icons.svg#wallet" />
@@ -116,7 +116,7 @@
 						</svg> Information
 					</div>
 				</div>
-				<div class="window p-3" id="keysList">
+				<div class="window px-3" id="keysList">
 
 				</div>
 				<hr>
