--- a/src/app/index.html
+++ b/src/app/index.html
@@ -26,7 +26,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start">
+				<button class="btn btn-dgb btn-lg text-start" disabled>
 					<svg class="bi bi-btn" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#collection" />
 					</svg>
@@ -34,7 +34,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start">
+				<button class="btn btn-dgb btn-lg text-start" disabled>
 					<svg class="bi bi-btn" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-up-right" />
 					</svg>
@@ -42,7 +42,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start">
+				<button class="btn btn-dgb btn-lg text-start" disabled>
 					<svg class="bi bi-btn" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-in-down-left" />
 					</svg>
@@ -50,7 +50,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start">
+				<button class="btn btn-dgb btn-lg text-start" disabled>
 					<svg class="bi bi-btn" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#digiasset" />
 					</svg>
@@ -58,7 +58,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start">
+				<button class="btn btn-dgb btn-lg text-start" disabled>
 					<svg class="bi bi-btn" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#digiid" />
 					</svg>
@@ -66,7 +66,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start">
+				<button class="btn btn-dgb btn-lg text-start" disabled>
 					<svg class="bi bi-btn" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#mortarboard" />
 					</svg>
@@ -74,7 +74,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start">
+				<button class="btn btn-dgb btn-lg text-start" disabled>
 					<svg class="bi bi-btn" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#code" />
 					</svg>
@@ -504,8 +504,7 @@
 	<script src="vendor/bootstrap.js"></script>
 	<script src="js/bridge.js"></script>
 	<script src="js/forms.js"></script>
-	<script src="js/frmKeys.js"></script>
-	<script src="js/frmAccounts.js"></script>
+	<script src="js/forms/frmKeys.js"></script>
 </body>
 
 </html>
