--- a/src/app/index.html
+++ b/src/app/index.html
@@ -26,7 +26,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start" disabled>
+				<button class="btn btn-dgb btn-lg text-start" onclick="frmAccounts_Load()">
 					<svg class="bi bi-btn" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#collection" />
 					</svg>
@@ -34,7 +34,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start" disabled>
+				<button class="btn btn-dgb btn-lg text-start" hidden>
 					<svg class="bi bi-btn" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-up-right" />
 					</svg>
@@ -42,7 +42,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start" disabled>
+				<button class="btn btn-dgb btn-lg text-start" hidden>
 					<svg class="bi bi-btn" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-in-down-left" />
 					</svg>
@@ -50,7 +50,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start" disabled>
+				<button class="btn btn-dgb btn-lg text-start" hidden>
 					<svg class="bi bi-btn" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#digiasset" />
 					</svg>
@@ -58,7 +58,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start" disabled>
+				<button class="btn btn-dgb btn-lg text-start" hidden>
 					<svg class="bi bi-btn" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#digiid" />
 					</svg>
@@ -66,7 +66,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start" disabled>
+				<button class="btn btn-dgb btn-lg text-start" hidden>
 					<svg class="bi bi-btn" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#mortarboard" />
 					</svg>
@@ -74,7 +74,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start" disabled>
+				<button class="btn btn-dgb btn-lg text-start" hidden>
 					<svg class="bi bi-btn" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#code" />
 					</svg>
@@ -136,6 +136,8 @@
 						</div>
 					</div>
 				</div>
+
+				<!-- Modals -->
 				<div class="modal fade" id="generateKeys" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
 					<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
 						<div class="modal-content">
@@ -467,11 +469,16 @@
 				<h1 class="p-4 text-center">
 					DigiByte Accounts
 				</h1>
-				<div class="row p-5">
-					<div class="col-4">
+				<div class="row px-5 py-4">
+					<div class="col-3">
 						<svg class="bi" width="18" height="18">
 							<use xlink:href="vendor/bootstrap-icons.svg#wallet" />
 						</svg> Name
+					</div>
+					<div class="col-3">
+						<svg class="bi" width="18" height="18">
+							<use xlink:href="vendor/bootstrap-icons.svg#boxes" />
+						</svg> Type
 					</div>
 					<div class="col-3">
 						<svg class="bi" width="18" height="18">
@@ -490,10 +497,50 @@
 				<hr>
 				<div class="row">
 					<div class="col-12">
-						<div class="option text-center p-4 me-1" data-bs-toggle="modal" data-bs-target="#generateKeys" onclick="frmKeys_Generate()">
+						<div class="option text-center p-4 me-1" data-bs-toggle="modal" data-bs-target="#addAccount" onclick="frmAccounts_Add()">
 							<svg class="bi" width="18" height="18">
 								<use xlink:href="vendor/bootstrap-icons.svg#plus-circle" />
 							</svg> Add Account
+						</div>
+					</div>
+				</div>
+				
+				<!-- Modals -->
+				<div class="modal fade" id="addAccount" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
+					<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+						<div class="modal-content">
+							<div class="mt-4">
+								<h5 class="text-center">
+									Add Account
+								</h5>
+							</div>
+							<div class="m-4" id="addAccount1">
+								<div class="mb-3">
+									<label>Source Key's:</label>
+									<select class="form-select" id="addAccount1Keys">
+										<option value="null" selected disabled>Select keys</option>
+									</select>
+								</div>
+								<div class="mb-3">
+									<label>Name:</label>
+									<input type="text" class="form-control" id="addAccount1Name" placeholder="Account's name">
+								</div>
+								<div class="mb-3 text-center">
+									<span id="addAccount1Error"></span>
+								</div>
+								<div class="text-center">
+									<button class="btn btn-success btn-sm" onclick="addAccount1_Continue()">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#arrow-right-circle" />
+										</svg> Continue
+									</button>
+									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal" onclick="addAccount_Clear()">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
+										</svg> Cancel
+									</button>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -505,6 +552,7 @@
 	<script src="js/bridge.js"></script>
 	<script src="js/forms.js"></script>
 	<script src="js/forms/frmKeys.js"></script>
+	<script src="js/forms/frmAccounts.js"></script>
 </body>
 
 </html>
