--- a/src/app/index.html
+++ b/src/app/index.html
@@ -87,6 +87,11 @@
 		<div class="col-10 h-100">
 			<!-- Top bar -->
 			<div class="text-end m-3">
+				<button class="btn btn-dgb btn-lg" onclick="Sync()">
+					<svg class="bi bi-btn" width="18" height="18">
+						<use xlink:href="vendor/bootstrap-icons.svg#arrow-repeat" />
+					</svg>
+				</button>
 				<button class="btn btn-dgb btn-lg">
 					<svg class="bi bi-btn" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#gear" />
@@ -625,21 +630,21 @@
 
 				<div class="row p-4">
 					<div class="col-xxl-8 col-6">
-						<h2>169'735'665.28546325 DGB</h2>
+						<h2 id="accountBalance">169'735'665.28546325 DGB</h2>
 						<h4 style="color: #9A9A9A">$ 1'420'568.41</h4>
-					</div>
-					<div class="col-xxl-2 col-3 d-grid gap-2">
-						<button class="btn btn-dgb bg-dgb fs-4" id="accountSend">
-							<svg class="bi bi-btn" width="24" height="24">
-								<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-up-right" />
-							</svg> Send
-						</button>
 					</div>
 					<div class="col-xxl-2 col-3 d-grid gap-2">
 						<button class="btn btn-dgb bg-dgb fs-4" id="accountReceive">
 							<svg class="bi bi-btn" width="24" height="24">
 								<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-in-down-left" />
 							</svg> Receive
+						</button>
+					</div>
+					<div class="col-xxl-2 col-3 d-grid gap-2">
+						<button class="btn btn-dgb bg-dgb fs-4" id="accountSend">
+							<svg class="bi bi-btn" width="24" height="24">
+								<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-up-right" />
+							</svg> Send
 						</button>
 					</div>
 				</div>
