--- a/src/app/index.html
+++ b/src/app/index.html
@@ -624,17 +624,17 @@
 				</div>
 			</div>
 			<div class="m-3" id="frmAccount" hidden>
+				<input type="hidden" id="accountID">
 				<h1 id="accountName">
 					Renzo's DGB Personal Account
 				</h1>
-
 				<div class="row p-4">
 					<div class="col-xxl-8 col-6">
 						<h2 id="accountBalance">169'735'665.28546325 DGB</h2>
 						<h4 style="color: #9A9A9A">$ 1'420'568.41</h4>
 					</div>
 					<div class="col-xxl-2 col-3 d-grid gap-2">
-						<button class="btn btn-dgb bg-dgb fs-4" id="accountReceive">
+						<button class="btn btn-dgb bg-dgb fs-4" id="accountReceive" data-bs-toggle="modal" data-bs-target="#receiveDGB" onclick="frmAccount_Receive()">
 							<svg class="bi bi-btn" width="24" height="24">
 								<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-in-down-left" />
 							</svg> Receive
@@ -648,19 +648,57 @@
 						</button>
 					</div>
 				</div>
-
 				<div class="list px-3" style="max-height: 60vh;" id="transactionList">
-				
+
+				</div>
+
+				<!-- Modals -->
+				<div class="modal fade" id="receiveDGB" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
+					<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+						<div class="modal-content">
+							<div class="mt-4">
+								<h5 class="text-center">
+									Receive DigiByte
+								</h5>
+							</div>
+							<div class="m-4" id="receiveDGB1">
+								<div class="mb-3 text-center">
+									<img id="receiveDGB1QR" class="img-fluid img-thumbnail">
+								</div>
+								<div class="mb-3">
+									<label>Address:</label>
+									<div class="input-group">
+										<input class="form-control text-center" id="receiveDGB1Address" readonly>
+										<button class="btn btn-success type="button">
+											<svg class="bi" width="18" height="18">
+												<use xlink:href="vendor/bootstrap-icons.svg#clipboard" />
+											</svg>
+										</button>
+									</div>
+								</div>
+								<div class="text-center">
+									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
+										</svg> Close
+									</button>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	</div>
 
 	<script src="vendor/bootstrap.js"></script>
+	<script src="vendor/digiqr.js"></script>
 	<script src="js/bridge.js"></script>
 	<script src="js/forms.js"></script>
 	<script src="js/forms/frmKeys.js"></script>
 	<script src="js/forms/frmAccounts.js"></script>
+	<script src="js/forms/frmAccount.js"></script>
 </body>
 
 </html>
